View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026044 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-04-10 09:39 | 2015-10-23 20:51 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026044: Optimize math_GlobOptMin class to enter options for solutions of some specified problems | ||||
Description | At present, math_GlobOptMin class always tries to find all global minimums of the given function (and spends more time for it). However, for some problems it is not necessary - only one global minimum is often enough (e.g. bug #25613). Therefore, it is necessary to provide math_GlobOptMin interface, which allows finding one minimum only. | ||||
Steps To Reproduce | Not needed. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26044 has been created by aml. SHA-1: aa9077613e8500f2912be8dbad70683596c31ffd Detailed log of new commits: Author: aml Date: Tue May 19 14:27:06 2015 +0300 0026044: Optimize math_GlobOptMin class to enter options for solutions of some specified problems Possibility to search single optimum added. |
|
Dear msv, Please check current state of branch CR26044. |
|
Branch CR26044 has been updated forcibly by aml. SHA-1: 7dee05880ee4a66851ed26f62bfc47d1d546a399 |
|
Remarks: src\math\math_GlobOptMin.hxx Rewrite the comment: param what determine find single solution or all solutions. as: defines whether to find single solution or all solutions. src\math\math_GlobOptMin.cxx - Place the lines 225-228: if (myC > 1.0) myE3 = - maxLength * myTol / 4.0; else myE3 = - maxLength * myTol * myC / 4.0; into the 'else' clause of the condition isFindSingleSolution. - In lines 434-435, compute the value of "(aStepBestValue - myF) * myZ" only once before entering 'if' statement. |
|
Branch CR26044 has been updated by aml. SHA-1: 60c2d0922cadf07f71cf235ac78ab4a4fe6da794 Detailed log of new commits: Author: aml Date: Wed May 20 15:50:25 2015 +0300 minor corrections. |
|
Dear msv, Please check updated branch CR26044. |
|
Please remove extra dot character at the end of the comment: "defines whether to find single solution or all solutions.." Then you can turn status to reviewed and assign to bugmaster for testing. |
|
Branch CR26044 has been updated forcibly by aml. SHA-1: 35ba4f2d4d515f1009b67600a91a835c2f331955 |
|
Extra dot character deleted and commits squashed into one commit. Please test. |
|
Branch CR26044 has been updated forcibly by mkv. SHA-1: 5e2990905449f70c52ee83fa9e0e1f270a79a760 |
|
Branch CR26044 has been updated forcibly by mkv. SHA-1: f63d11084997c2d027d31b5b05d630e432c8a509 |
|
Dear BugMaster, Branch CR26044 was rebased on current master of occt git-repository. SHA-1: f63d11084997c2d027d31b5b05d630e432c8a509 |
|
Dear BugMaster, Branch CR26044 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: f63d11084997c2d027d31b5b05d630e432c8a509 Number of compiler warnings: occt component : Linux: 25 (25 on master) Windows: 0 (0 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 99417358 / 99635556 [-0.22%] Total CPU difference: 18858.500000000135 / 18307.61000000015 [+3.01%] products component : Total MEMORY difference: 24115347 / 24302714 [-0.77%] Total CPU difference: 7710.330000000036 / 7853.650000000017 [-1.82%] Testing on Windows: occt component : Total MEMORY difference: 59168441 / 58808559 [+0.61%] Total CPU difference: 17106.991659498763 / 16844.11437439903 [+1.56%] products component : Total MEMORY difference: 15640837 / 15645614 [-0.03%] Total CPU difference: 6575.442149999995 / 6595.410277999983 [-0.30%] There are no differences in images found by testdiff. |
|
Branch CR26044 has been deleted by inv. SHA-1: f63d11084997c2d027d31b5b05d630e432c8a509 |
occt: master 78e7cada 2015-05-19 11:27:06
Committer: bugmaster Details Diff |
0026044: Optimize math_GlobOptMin class to enter options for solutions of some specified problems Possibility to search single optimum added. |
Affected Issues 0026044 |
|
mod - src/math/math_GlobOptMin.cxx | Diff File | ||
mod - src/math/math_GlobOptMin.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-04-10 09:39 |
|
New Issue | |
2015-04-10 09:39 |
|
Assigned To | => aml |
2015-04-10 10:24 |
|
Target Version | 6.9.0 => 7.1.0 |
2015-05-19 16:39 | git | Note Added: 0041289 | |
2015-05-19 16:41 |
|
Note Added: 0041290 | |
2015-05-19 16:41 |
|
Assigned To | aml => msv |
2015-05-19 16:41 |
|
Status | new => resolved |
2015-05-19 18:28 | git | Note Added: 0041295 | |
2015-05-20 15:41 |
|
Note Added: 0041319 | |
2015-05-20 15:41 |
|
Assigned To | msv => aml |
2015-05-20 15:41 |
|
Status | resolved => assigned |
2015-05-20 15:52 | git | Note Added: 0041322 | |
2015-05-20 15:53 |
|
Note Added: 0041323 | |
2015-05-20 15:53 |
|
Assigned To | aml => msv |
2015-05-20 15:53 |
|
Status | assigned => resolved |
2015-05-20 16:18 |
|
Note Added: 0041324 | |
2015-05-20 16:18 |
|
Assigned To | msv => aml |
2015-05-20 16:18 |
|
Status | resolved => assigned |
2015-05-21 07:19 | git | Note Added: 0041347 | |
2015-05-21 07:20 |
|
Status | assigned => resolved |
2015-05-21 07:21 |
|
Note Added: 0041348 | |
2015-05-21 07:21 |
|
Assigned To | aml => bugmaster |
2015-05-21 07:21 |
|
Status | resolved => reviewed |
2015-05-21 11:45 |
|
Assigned To | bugmaster => mkv |
2015-05-21 17:33 | git | Note Added: 0041397 | |
2015-05-21 18:37 | git | Note Added: 0041404 | |
2015-05-25 17:51 |
|
Note Added: 0041517 | |
2015-05-25 17:52 |
|
Note Added: 0041518 | |
2015-05-25 17:52 |
|
Assigned To | mkv => bugmaster |
2015-05-25 17:52 |
|
Status | reviewed => tested |
2015-05-25 17:52 |
|
Test case number | => Not needed |
2015-05-29 14:15 | bugmaster | Changeset attached | => occt master 78e7cada |
2015-05-29 14:15 | bugmaster | Status | tested => verified |
2015-05-29 14:15 | bugmaster | Resolution | open => fixed |
2015-05-29 14:19 | bugmaster | Target Version | 7.1.0 => 7.0.0 |
2015-08-14 11:00 | git | Note Added: 0044266 | |
2015-08-26 11:14 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-10-16 14:56 |
|
Status | verified => closed |
2015-10-23 20:51 |
|
Fixed in Version | => 6.9.1 |