0026044: Optimize math_GlobOptMin class to enter options for solutions of some specified problems

Possibility to search single optimum added.